try to use watermill cqrs
